products/scilla-server/cd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scilla-server
  labels:
    app.kubernetes.io/name: scilla-server
