products/scilla-server/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scilla-server
  labels:
    app.kubernetes.io/name: scilla-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scilla-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scilla-server
    spec:
      containers:
        - image: scilla-server
          name: scilla-server
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: 4000Mi
              cpu: 2
            requests:
              memory: 2000Mi
              cpu: 1
