products/scilla-server/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scilla-server
  labels:
    app.kubernetes.io/name: scilla-server
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: scilla-server
